echo-headers/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-http
  name: python-http
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-http
  type: ClusterIP
