echo-headers/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: python-http
  name: python-http
spec:
  to:
    kind: Service
    name: python-http
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
